--- a/breads.html
+++ b/breads.html
@@ -42,11 +42,11 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
                   <a class="dropdown-item" href="/bars">Bars</a>
-                  <a class="dropdown-item" href="/breads">Bread</a>
-                  <a class="dropdown-item" href="/cookies">Cookies</a>
-                  <a class="dropdown-item" href="/gfdfentrees">GF/DF Entrees</a>
-                  <a class="dropdown-item" href="/gfdfdesserts">GF/DF Desserts</a>
-                  <a class="dropdown-item" href="/other">Other</a>
+                <a class="dropdown-item" href="/breads">Bread</a>
+                <a class="dropdown-item" href="/cakesandpies">Cakes/Pies</a>
+                <a class="dropdown-item" href="/cookies">Cookies</a>
+                <a class="dropdown-item" href="/gfdfentrees">Entrees</a>
+                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -69,76 +69,12 @@
       </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Bread</h5>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/dinnerrolls" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/dinnerrolls.jpg" class="w-100" alt="Dinner Rolls">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/dinnerrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/biscuits" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/biscuits.jpg" class="w-100" alt="Biscuits">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/biscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/loafbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/loafbread.jpg" class="w-100" alt="Loaf Bread">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/loafbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Loaf Bread</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/pumpkinbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pumpkinloaf.png" class="w-100" alt="Pumpkin Bread">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/monkeybread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/monkeybread.jpeg" class="w-100" alt="Monkey Bread Muffins">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/cinnamonrolls.JPG" class="w-100" alt="Cinnamon Rolls">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
+      <h5 class="py-3 mb-0">Bread</h5>     
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/gfdfpumpkinbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/gfdfpumpkinbread.jpg" class="w-100" alt="GF/DF Pumpkin Bread">
+              <img src="assets/images/food/pumpkinloaf.png" class="w-100" alt="GF/DF Pumpkin Bread">
             </a>
             <figcaption class="mt-2">
               <a href="/gfdfpumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Pumpkin Bread</a>
