--- a/butterbars.html
+++ b/butterbars.html
@@ -42,11 +42,11 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
                   <a class="dropdown-item" href="/bars">Bars</a>
-                  <a class="dropdown-item" href="/breads">Bread</a>
-                  <a class="dropdown-item" href="/cookies">Cookies</a>
-                  <a class="dropdown-item" href="/gfdfentrees">GF/DF Entrees</a>
-                  <a class="dropdown-item" href="/gfdfdesserts">GF/DF Desserts</a>
-                  <a class="dropdown-item" href="/other">Other</a>
+                <a class="dropdown-item" href="/breads">Bread</a>
+                <a class="dropdown-item" href="/cakesandpies">Cakes/Pies</a>
+                <a class="dropdown-item" href="/cookies">Cookies</a>
+                <a class="dropdown-item" href="/gfdfentrees">Entrees</a>
+                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -131,7 +131,7 @@
                 <strong>Crust</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 box vanilla or yellow cake mix (I use the brands <a href="https://www.wholefoodsmarket.com/product/european-bakery-vanilla-organic-cake-mix-1525-oz-b000vk2cly" style="color: #FF6330">European Gourmet Bakery</a>, <a href="https://www.wholefoodsmarket.com/product/annies-homegrown-organic-classic-yellow-cake-mix-21-oz-b07bb1wlj8" style="color: #FF6330">Annie's</a>, <a href="https://www.wholefoodsmarket.com/product/arrowhead-mills-organic-vanilla-cake-mix-b00zkupl6i" style="color: #FF6330">Arrowhead Mills</a>, and <a href="https://shop.wholesomesweet.com/products/organic-scratch-quality-golden-cake-baking-mix?variant=41210924630179" style="color: #FF6330">Wholesome</a>)</label>
+                  <label class="form-check-label" for="crackers">1 box gluten free vanilla or yellow cake mix</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
