--- a/faves.html
+++ b/faves.html
@@ -42,11 +42,11 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
                   <a class="dropdown-item" href="/bars">Bars</a>
-                  <a class="dropdown-item" href="/breads">Bread</a>
-                  <a class="dropdown-item" href="/cookies">Cookies</a>
-                  <a class="dropdown-item" href="/gfdfentrees">GF/DF Entrees</a>
-                  <a class="dropdown-item" href="/gfdfdesserts">GF/DF Desserts</a>
-                  <a class="dropdown-item" href="/other">Other</a>
+                <a class="dropdown-item" href="/breads">Bread</a>
+                <a class="dropdown-item" href="/cakesandpies">Cakes/Pies</a>
+                <a class="dropdown-item" href="/cookies">Cookies</a>
+                <a class="dropdown-item" href="/gfdfentrees">Entrees</a>
+                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -197,7 +197,7 @@
 </section>
 <section class="tstbite-section p-0">
   <div class="container">
-<section class="tstbite-components my-4 my-md-5">
+<!-- <section class="tstbite-components my-4 my-md-5">
   <h5 class="py-3 mb-0">Favorite Spots</h5>
   <div class="row">
     <div class="col-lg-2 col-md-4 col-4">
@@ -231,7 +231,7 @@
       </figure>
     </div>
   </div>
-  </section>
+  </section> -->
   </div>
   </section>
 
