--- a/pumpkinbread.html
+++ b/pumpkinbread.html
@@ -42,11 +42,11 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
                   <a class="dropdown-item" href="/bars">Bars</a>
-                  <a class="dropdown-item" href="/breads">Bread</a>
-                  <a class="dropdown-item" href="/cookies">Cookies</a>
-                  <a class="dropdown-item" href="/gfdfentrees">GF/DF Entrees</a>
-                  <a class="dropdown-item" href="/gfdfdesserts">GF/DF Desserts</a>
-                  <a class="dropdown-item" href="/other">Other</a>
+                <a class="dropdown-item" href="/breads">Bread</a>
+                <a class="dropdown-item" href="/cakesandpies">Cakes/Pies</a>
+                <a class="dropdown-item" href="/cookies">Cookies</a>
+                <a class="dropdown-item" href="/gfdfentrees">Entrees</a>
+                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -99,7 +99,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/pumpkinloaf.png" class="w-100" >
+          <img src="assets/images/food/pumpkinbread.png" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
