--- a/savory.html
+++ b/savory.html
@@ -42,11 +42,11 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
                   <a class="dropdown-item" href="/bars">Bars</a>
-                  <a class="dropdown-item" href="/breads">Bread</a>
-                  <a class="dropdown-item" href="/cookies">Cookies</a>
-                  <a class="dropdown-item" href="/gfdfentrees">GF/DF Entrees</a>
-                  <a class="dropdown-item" href="/gfdfdesserts">GF/DF Desserts</a>
-                  <a class="dropdown-item" href="/other">Other</a>
+                <a class="dropdown-item" href="/breads">Bread</a>
+                <a class="dropdown-item" href="/cakesandpies">Cakes/Pies</a>
+                <a class="dropdown-item" href="/cookies">Cookies</a>
+                <a class="dropdown-item" href="/gfdfentrees">Entrees</a>
+                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -70,60 +70,19 @@
 
     <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Savory</h5>
+      <div>*All recipes are either egg-free or can be made egg-free.</div>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/fusilliallavodka" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/fusilliallavodka.png" class="w-100" alt="Fusilli Alla Vodka">
+            <a href="/volcanosalmon" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/volcanosalmon.jpg" class="w-100" alt="Volcano Salmon">
             </a>
             <figcaption class="mt-2">
-              <a href="/fusilliallavodka" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fusilli Alla Vodka</a>
+              <a href="/volcanosalmon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Volcano Salmon</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/lettucecups" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/lettucecups.jpg" class="w-100" alt="Lettuce Cups">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/lettucecups" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chicken Teriyaki Lettuce Cups</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/tofu" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/tofu.jpg" class="w-100" alt="Tofu">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/tofu" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Crispy Baked Tofu</a>
-            </figcaption>
-          </figure>
-        </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <figure class="my-3 tstbite-card">
-              <a href="/comingsoon" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/mustardchicken.jpg" class="w-100" alt="GF/DF Bread Crumb Mustard Chicken">
-              </a>
-              <figcaption class="mt-2">
-                <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Bread Crumb Mustard Chicken</a>
-              </figcaption>
-            </figure>
-          </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/soup" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chickennoodlesoup.jpg" class="w-100" alt="Lettuce Cups">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/soup" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chicken Noodle Soup</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
+         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/comingsoon" class="tstbite-animation rounded-6">
               <img src="assets/images/food/chileanseabass.jpeg" class="w-100" alt="Soy Ginger Chilean Sea Bass">
@@ -133,56 +92,57 @@
             </figcaption>
           </figure>
         </div>
-        <div class="row">
-          <div class="col-md-4">
-            <figure class="my-3 tstbite-card">
-              <a href="/kimchifriedrice" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/kimchifriedrice.jpg" class="w-100" alt="Kimchi Fried Rice">
-              </a>
-              <figcaption class="mt-2">
-                <a href="/kimchifriedrice" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Kimchi Fried Rice</a>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-md-4">
-            <figure class="my-3 tstbite-card">
-              <a href="/volcanosalmon" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/volcanosalmon.jpg" class="w-100" alt="Volcano Salmon">
-              </a>
-              <figcaption class="mt-2">
-                <a href="/volcanosalmon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Volcano Salmon</a>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-md-4">
-            <figure class="my-3 tstbite-card">
-              <a href="/meatballs" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/meatballs.jpg" class="w-100" alt="Meatballs">
-              </a>
-              <figcaption class="mt-2">
-                <a href="/meatballs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meatballs</a>
-              </figcaption>
-            </figure>
-          </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/kimchifriedrice" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/kimchifriedrice.jpg" class="w-100" alt="Kimchi Fried Rice">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/kimchifriedrice" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Kimchi Fried Rice</a>
+            </figcaption>
+          </figure>
         </div>
-        <div class="row">
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/meatballs" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/meatballs.jpg" class="w-100" alt="Meatballs">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/meatballs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meatballs</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/fineherbdressing" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/fineherbdressing.jpg" class="w-100" alt="Fine Herb Dressing">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/fineherbdressing" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fine Herb Dressing</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/rosemarygarlicdressing" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/rosemarygarlicdressing.jpg" class="w-100" alt="Rosemary Garlic Dressing">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/rosemarygarlicdressing" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Rosemary Garlic Dressing</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
           <div class="col-md-4">
             <figure class="my-3 tstbite-card">
-              <a href="/fineherbdressing" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/fineherbdressing.jpg" class="w-100" alt="Fine Herb Dressing">
+              <a href="/gfdfvdinnerrolls" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/gfdinnerrolls.jpg" class="w-100" alt="GF/DF/V Dinner Rolls">
               </a>
               <figcaption class="mt-2">
-                <a href="/fineherbdressing" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fine Herb Dressing</a>
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-md-4">
-            <figure class="my-3 tstbite-card">
-              <a href="/rosemarygarlicdressing" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/rosemarygarlicdressing.jpg" class="w-100" alt="Rosemary Garlic Dressing">
-              </a>
-              <figcaption class="mt-2">
-                <a href="/rosemarygarlicdressing" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Rosemary Garlic Dressing</a>
+                <a href="/gfdfvdinnerrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
               </figcaption>
             </figure>
           </div>
@@ -196,21 +156,40 @@
               </figcaption>
             </figure>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <figure class="my-3 tstbite-card">
-              <a href="/stirfry" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/teriyakistirfry.jpg" class="w-100" alt="Teriyaki Stir Fry">
-              </a>
-              <figcaption class="mt-2">
-                <a href="/stirfry" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Teriyaki Stir Fry</a>
-              </figcaption>
-            </figure>
-          </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/stirfry" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/teriyakistirfry.jpg" class="w-100" alt="Teriyaki Stir Fry">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/stirfry" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Teriyaki Stir Fry</a>
+            </figcaption>
+          </figure>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/gfdfbiscuits" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/gfdfbiscuits.png" class="w-100" alt="GF/DF Biscuits">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/gfdfbiscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/mustardchicken.jpg" class="w-100" alt="GF/DF Bread Crumb Mustard Chicken">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Bread Crumb Mustard Chicken</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
+    </div>
     </section>
   </div>
 
