--- a/sweet.html
+++ b/sweet.html
@@ -69,254 +69,62 @@
       </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Sweet</h5>
+      <h5 class="py-3 mb-0">Sweets</h5>
+        <div class="row">
+          <div class="col-md-4">
+            <figure class="my-3 tstbite-card">
+              <a href="/chocolateavocadocookies" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/chocolateavocadocookies.jpg" class="w-100" alt="Chocolate Avocado Cookies">
+              </a>
+              <figcaption class="mt-2">
+                <a href="/chocolateavocadocookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Avocado Cookies</a>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-md-4">
+            <figure class="my-3 tstbite-card">
+              <a href="/hazelnutoliveoilcake" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/hazelnutoliveoilcake.png" class="w-100" alt="Hazelnut Olive Oil Cake">
+              </a>
+              <figcaption class="mt-2">
+                <a href="/hazelnutoliveoilcake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Olive Oil Cake</a>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-md-4">
+            <figure class="my-3 tstbite-card">
+              <a href="/gfdfpumpkinbread" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/pumpkinbread.png" class="w-100" alt="GF/DF Pumpkin Bread">
+              </a>
+              <figcaption class="mt-2">
+                <a href="/gfdfpumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
       <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/pumpkincookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pumpkincookies.jpg" class="w-100" alt="Pumpkin Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/pumpkincookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pudding Chocolate Chip Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookiecake" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/cookiecake.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/mnmcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/mandmcookies.jpg" class="w-100" alt="Mini M&M Chocolate Chip Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/mnmcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mini M&M Chocolate Chip Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/pumpkinbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pumpkinloaf.png" class="w-100" alt="Pumpkin Bread">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/monkeybread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/monkeybread.jpeg" class="w-100" alt="Monkey Bread Muffins">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/cinnamonrolls.JPG" class="w-100" alt="Cinnamon Rolls">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/sourcherrystrudel" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/sourcherrystrudel.jpg" class="w-100" alt="Sour Cherry Strudel">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/sourcherrystrudel" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Sour Cherry Strudel</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/baklava" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/meringues" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/meringues.jpg" class="w-100" alt="Meringues">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/meringues" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meringues</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/hazelnuttruffles" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/hazelnuttruffles.JPG" class="w-100" alt="Hazelnut Truffles">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/hazelnuttruffles" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Truffles</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/brownies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/brownies.png" class="w-100" alt="Brownies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Brownies</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/chocolateavocadocookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chocolateavocadocookies.jpg" class="w-100" alt="Chocolate Avocado Cookies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/chocolateavocadocookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Chocolate Avocado Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/butterbars" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/butterbars.jpg" class="w-100" alt="Butter Bars">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/butterbars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Gooey Butter Bars</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/creampuffs" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/creampuffsother.jpg" class="w-100" alt="Cream Puffs">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/crepes" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/palacinke.jpg" class="w-100" alt="Crepes">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/crepes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Crepes</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/pancakes" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pancakes.jpg" class="w-100" alt="Pancakes">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/pancakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fluffy Pancakes</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/hazelnutoliveoilcake" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/hazelnutoliveoilcake.png" class="w-100" alt="Hazelnut Olive Oil Cake">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/hazelnutoliveoilcake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Hazelnut Olive Oil Cake</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/fudgefrosting" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/fudgefrosting.jpg" class="w-100" alt="Fudge Frosting">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/fudgefrosting" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fudge Frosting</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/creamcheesefrosting" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/creamcheesefrosting.jpg" class="w-100" alt="Cream Cheese Frosting">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/creamcheesefrosting" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Cheese Frosting</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/gfdfpumpkinbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/gfdfpumpkinbread.jpg" class="w-100" alt="GF/DF Pumpkin Bread">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/gfdfpumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Pumpkin Bread</a>
-            </figcaption>
-          </figure>
-        </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/gfdfpeachpie" class="tstbite-animation rounded-6">
               <img src="assets/images/food/gfdfpeachpie.jpeg" class="w-100" alt="GF/DF Peach Pie">
             </a>
             <figcaption class="mt-2">
-              <a href="/gfdfpeachpie" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Peach Pie</a>
+              <a href="/gfdfpeachpie" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Peach Pie</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/brownies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/brownies.png" class="w-100" alt="GF/DF Brownies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
             </figcaption>
           </figure>
         </div>
       </div>
-      </div>
+    </div>
     </section>
   </div>
 
