--- a/bars.html
+++ b/bars.html
@@ -42,11 +42,11 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
                   <a class="dropdown-item" href="/bars">Bars</a>
-                  <a class="dropdown-item" href="/breads">Bread</a>
-                  <a class="dropdown-item" href="/cookies">Cookies</a>
-                  <a class="dropdown-item" href="/gfdfentrees">GF/DF Entrees</a>
-                  <a class="dropdown-item" href="/gfdfdesserts">GF/DF Desserts</a>
-                  <a class="dropdown-item" href="/other">Other</a>
+                <a class="dropdown-item" href="/breads">Bread</a>
+                <a class="dropdown-item" href="/cakesandpies">Cakes/Pies</a>
+                <a class="dropdown-item" href="/cookies">Cookies</a>
+                <a class="dropdown-item" href="/gfdfentrees">Entrees</a>
+                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -71,16 +71,6 @@
     <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Bars</h5>
       <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/baklava" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
-            </figcaption>
-          </figure>
-        </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/butterbars" class="tstbite-animation rounded-6">
