--- a/cakesandpies.html
+++ b/cakesandpies.html
@@ -42,11 +42,11 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
                   <a class="dropdown-item" href="/bars">Bars</a>
-                  <a class="dropdown-item" href="/breads">Bread</a>
-                  <a class="dropdown-item" href="/cookies">Cookies</a>
-                  <a class="dropdown-item" href="/gfdfentrees">GF/DF Entrees</a>
-                  <a class="dropdown-item" href="/gfdfdesserts">GF/DF Desserts</a>
-                  <a class="dropdown-item" href="/other">Other</a>
+                <a class="dropdown-item" href="/breads">Bread</a>
+                <a class="dropdown-item" href="/cakesandpies">Cakes/Pies</a>
+                <a class="dropdown-item" href="/cookies">Cookies</a>
+                <a class="dropdown-item" href="/gfdfentrees">Entrees</a>
+                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -69,19 +69,8 @@
       </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Gluten Free, Dairy Free, & Refined Sugar Free Desserts</h5>
-      <div>*All recipes are either egg-free or can be made egg-free.</div>
+      <h5 class="py-3 mb-0">Cakes/Pies</h5>
         <div class="row">
-          <div class="col-md-4">
-            <figure class="my-3 tstbite-card">
-              <a href="/chocolateavocadocookies" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/chocolateavocadocookies.jpg" class="w-100" alt="Chocolate Avocado Cookies">
-              </a>
-              <figcaption class="mt-2">
-                <a href="/chocolateavocadocookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Avocado Cookies</a>
-              </figcaption>
-            </figure>
-          </div>
           <div class="col-md-4">
             <figure class="my-3 tstbite-card">
               <a href="/hazelnutoliveoilcake" class="tstbite-animation rounded-6">
@@ -94,35 +83,14 @@
           </div>
           <div class="col-md-4">
             <figure class="my-3 tstbite-card">
-              <a href="/gfdfpumpkinbread" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/gfdfpumpkinbread.jpg" class="w-100" alt="GF/DF Pumpkin Bread">
+              <a href="/gfdfpeachpie" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/gfdfpeachpie.jpeg" class="w-100" alt="GF/DF Peach Pie">
               </a>
               <figcaption class="mt-2">
-                <a href="/gfdfpumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
+                <a href="/gfdfpeachpie" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Peach Pie</a>
               </figcaption>
             </figure>
           </div>
-        </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/gfdfpeachpie" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/gfdfpeachpie.jpeg" class="w-100" alt="GF/DF Peach Pie">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/gfdfpeachpie" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Peach Pie</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/brownies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/brownies.png" class="w-100" alt="GF/DF Brownies">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
-            </figcaption>
-          </figure>
         </div>
       </div>
     </div>
