--- a/gfdf.html
+++ b/gfdf.html
@@ -42,11 +42,11 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
                   <a class="dropdown-item" href="/bars">Bars</a>
-                  <a class="dropdown-item" href="/breads">Bread</a>
-                  <a class="dropdown-item" href="/cookies">Cookies</a>
-                  <a class="dropdown-item" href="/gfdfentrees">GF/DF Entrees</a>
-                  <a class="dropdown-item" href="/gfdfdesserts">GF/DF Desserts</a>
-                  <a class="dropdown-item" href="/other">Other</a>
+                <a class="dropdown-item" href="/breads">Bread</a>
+                <a class="dropdown-item" href="/cakesandpies">Cakes/Pies</a>
+                <a class="dropdown-item" href="/cookies">Cookies</a>
+                <a class="dropdown-item" href="/gfdfentrees">Entrees</a>
+                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -190,7 +190,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/gfdfpumpkinbread" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/gfdfpumpkinbread.jpg" class="w-100" alt="Pumpkin Bread">
+              <img src="assets/images/food/pumpkinloaf.png" class="w-100" alt="Pumpkin Bread">
             </a>
             <figcaption class="mt-2">
               <a href="/gfdfpumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
